env/templates/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: azure
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
  labels:
    provider: fabric8
  name: jenkins
  namespace: jx
spec:
  rules:
  - host: jenkins.jx.release.alpha.jenkins.io
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
  tls:
  - hosts:
    - jenkins.jx.release.alpha.jenkins.io
    secretName: jenkins.jx.release.alpha.jenkins.io-cert
