env/templates/nexus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: azure
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  labels:
    provider: fabric8
  name: nexus
  namespace: jx
spec:
  rules:
  - host: nexus.jx.release.alpha.jenkins.io
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
  tls:
  - hosts:
    - nexus.jx.release.alpha.jenkins.io
    secretName: nexus.jx.release.alpha.jenkins.io-cert
